Bug 150866 - time left is incorrectly computed
Summary: time left is incorrectly computed
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-15 18:43 UTC by Maciej Pilichowski
Modified: 2008-01-07 19:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2007-10-15 18:43:26 UTC
Version:            (using KDE KDE 3.5.7)
Installed from:    SuSE RPMs

Maybe I just don't understand something, but I have big file to download, and I amanged to download 10% of it in one hour, so I suppose ETA is 9 hours.

But ktorrent shows ~1900 days. I am not kidding.

Hmm, screen blinked and I get 4 minutes for this file. Both estimations are unrealistic.
Comment 1 Joris Guisson 2007-10-15 19:23:53 UTC
Which estimation algorithm are you using (you can find that in the advanced settings). Looks you are using current speed, which is inaccurate.
Comment 2 Maciej Pilichowski 2007-10-15 19:27:47 UTC
I was using KTorrent. I set it now to global avg. speed.

Btw.:
1) if it is well known that specific alg. is not accurate maybe it is better to remove it?
2) several alg. for computing ETA looks like there is no agreement how to compute ETA at all. Is this correct?
Comment 3 Joris Guisson 2007-10-16 19:42:51 UTC
1) Probably
2) The multiple algorithms were added when some people where not satisfied with the one we were using (though I'm not really sure on all the details, Ivan was mostly involved with this)

Comment 4 Maciej Pilichowski 2007-10-16 20:33:33 UTC
Joris, thanks for your answer.

I think it would be the best to stick with one algorithm (after all ETA means, estimated, not guaranteed :-)) or at least removing incorrect ones (Ktorrent, current speed) + setting the simplest one (global avg.) as default.
Comment 5 Joris Guisson 2007-10-18 19:57:30 UTC
I'm gonna clean this up a bit in the KDE 4 port and keep over the most accurate ones (even global avg. isn't really that accurate)
Comment 6 Maciej Pilichowski 2007-10-18 20:27:44 UTC
Thank you Joris!

Btw. "not being really accurate" -- this is ok, I would just like to see reasonable times, so I don't have to use calculator by myself to compute that ETA is 10 minutes or 30 minutes.
Comment 7 Joris Guisson 2008-01-07 19:27:30 UTC
SVN commit 758361 by guisson:

- Added time estimation algorithm selection
- Fixed bug in KTorrent algorithm (150866)

BUG: 150866



 M  +64 -3     ktorrent/advancedpref.ui  
 M  +1 -0      libbtcore/CMakeLists.txt  
 M  +16 -26    libbtcore/torrent/timeestimator.cpp  
 M  +11 -11    libbtcore/torrent/timeestimator.h  
 M  +3 -0      libktcore/interfaces/functions.cpp  
 M  +2 -0      libktcore/ktorrent.kcfg  


WebSVN link: http://websvn.kde.org/?view=rev&revision=758361