- Added time estimation algorithm selection - Fixed bug in KTorrent algorithm (150866)

BUG: 150866


svn path=/trunk/extragear/network/ktorrent/; revision=758361